Add the list of all drivers. Unit test. Updated documentation.
